tests/expectations/compiler/constructor/calls_in_constructors_fail.out
Error [ETYC0372042]: A `constructor`, `function`, or `inline` can only call an `inline`.
    --> compiler-test:11:9
     |
  11 |         foo(true);
     |         ^^^^^^^^^
Error [ETYC0372042]: A `constructor`, `function`, or `inline` can only call an `inline`.
    --> compiler-test:12:9
     |
  12 |         bar();
     |         ^^^^^
